<resources>
    <string name="app_name">SavageDiceRoller</string>
    <string name="WildCardButton">Wild Card</string>
    <string name="ExtraButton">Extra</string>
    <string name="D4Button">D4</string>
    <string name="ResultText">result will show here</string>
    <string name="SliderText">Modifier</string>
    <string name="PositveButton">+</string>
    <string name="NegativeButton">-</string>
    <string name="SpinnerTextView">SpinnerDefault</string>
    <string name="ModifierValue">Modifier Value</string>
    <string name="D6Button">D6</string>
    <string name="D8Button">D8</string>
    <string name="D10Button">D10</string>
    <string name="D12Button">D12</string>
    <string name="WildRolls">Wild Die Rolls</string>
    <string name="Rolls">Rolls</string>
    <string name="SavageDieRollerButton">Savage Die Roller</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="OpenD6RollerButton">Open D6 Die Roller</string>
    <string name="FudgeRollerButton">Fudge Die Roller</string>
    <string name="DicePoolRollerButton">Dice Pool Roller</string>
    <string name="OpenD6Rolls">Rolls</string>
    <string name="OpenD6Results">results will show here</string>
    <string name="OpenD6DieTotal">0</string>
    <string name="OpenD6WildSwitch">Wild Die</string>
    <string name="RollButton">Roll</string>
    <string name="OpenD6WildDieView">Wild Die Roll</string>
</resources>
