<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.rhuard.savagediceroller.SavageDiceRoller"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

<RadioGroup
    android:layout_width="121dp"
    android:layout_height="64dp"
    android:id="@+id/charTypeRadioGroup"
    android:layout_marginStart="16dp"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="16dp"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toTopOf="@+id/d4Button">

    <RadioButton
        android:id="@+id/wildCardRadioButton"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:text="@string/WildCardButton" />

    <RadioButton
        android:id="@+id/extraRadioButton"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:text="@string/ExtraButton" />
</RadioGroup>

<Button
    android:id="@+id/d4Button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="RollD4"
    android:text="@string/D4Button"
    android:layout_marginStart="16dp"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toTopOf="@+id/d6Button"
    android:layout_marginLeft="16dp"
    app:layout_constraintLeft_toLeftOf="parent" />

<Button
    android:id="@+id/d6Button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="RollD6"
    android:text="@string/D6Button"
    android:layout_marginStart="16dp"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toTopOf="@+id/d8Button"
    android:layout_marginLeft="16dp"
    app:layout_constraintLeft_toLeftOf="parent" />

<Button
    android:id="@+id/d8Button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="RollD8"
    android:text="@string/D8Button"
    android:layout_marginStart="16dp"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toTopOf="@+id/d10Button"
    android:layout_marginLeft="16dp"
    app:layout_constraintLeft_toLeftOf="parent" />

<Button
    android:id="@+id/d10Button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="RollD10"
    android:text="@string/D10Button"
    android:layout_marginStart="16dp"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toTopOf="@+id/d12Button"
    android:layout_marginLeft="16dp"
    app:layout_constraintLeft_toLeftOf="parent" />

<Button
    android:id="@+id/d12Button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="RollD12"
    android:text="@string/D12Button"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginBottom="16dp"
    app:layout_constraintBottom_toTopOf="@+id/wildTextView" />

    <TextView
    android:id="@+id/resultTextView"
    android:layout_width="340dp"
    android:layout_height="35dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
    android:gravity="left|center_vertical"
    android:text="@string/ResultText"
    android:textSize="25sp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
    android:id="@+id/rollTextView"
    android:layout_width="340dp"
    android:layout_height="35dp"
        android:gravity="left|center_vertical"
    android:text="@string/Rolls"
    android:textSize="25sp"
        android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
        tools:layout_editor_absoluteY="421dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

<TextView
    android:id="@+id/wildTextView"
    android:layout_width="340dp"
    android:layout_height="35dp"
    android:gravity="left|center_vertical"
    android:text="@string/WildRolls"
    android:textSize="25sp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    tools:layout_editor_absoluteY="382dp"
    android:layout_marginLeft="16dp"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginRight="16dp"
    app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/modifierLayout"
        android:layout_width="168dp"
        android:layout_height="168dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent">

        <fragment
            android:id="@+id/modifierFragment"
            android:name="com.example.rhuard.savagediceroller.ModifierFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>