<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rhuard.savagediceroller.OpenD6DiceRoller">

    <LinearLayout
        android:id="@+id/modifierLayout"
        android:layout_width="168dp"
        android:layout_height="168dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp">

        <fragment
            android:id="@+id/modiferFragment"
            android:name="com.example.rhuard.savagediceroller.ModifierFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <Switch
        android:id="@+id/wildDieSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="17dp"
        android:text="@string/OpenD6WildSwitch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/aAddD6DieButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:onClick="AddDice"
        android:text="@string/PositveButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openD6numDiceView"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/subD6DieButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:onClick="RemoveDice"
        android:text="@string/NegativeButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aAddD6DieButton"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/openD6ResultView"
        android:layout_width="340dp"
        android:layout_height="35dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="left|center_vertical"
        android:text="@string/OpenD6Results"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="0.416" />

    <TextView
        android:id="@+id/openD6numDiceView"
        android:layout_width="68dp"
        android:layout_height="43dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp"
        android:gravity="left|center_vertical"
        android:text="@string/OpenD6DieTotal"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wildDieSwitch"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:onClick="RollDice"
        android:text="@string/RollButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subD6DieButton"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/openD6WildRollView"
        android:layout_width="340dp"
        android:layout_height="35dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="left|center_vertical"
        android:text="@string/OpenD6WildDieView"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/openD6RollsScrollView" />

    <HorizontalScrollView
        android:id="@+id/openD6RollsScrollView"
        android:layout_width="340dp"
        android:layout_height="35dp"
        android:layout_marginBottom="9dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/openD6ResultView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/openD6RollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="none"
                android:focusable="auto"
                android:focusableInTouchMode="false"
                android:gravity="left|center_vertical"
                android:isScrollContainer="false"
                android:scrollHorizontally="false"
                android:scrollIndicators="end"
                android:scrollbars="none"
                android:singleLine="false"
                android:text="@string/OpenD6Rolls"
                android:textSize="25sp"
                app:layout_constraintHorizontal_bias="0.0"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp" />
        </LinearLayout>
    </HorizontalScrollView>

</android.support.constraint.ConstraintLayout>
