<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rhuard.savagediceroller.ModifierFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Switch
            android:id="@+id/modifierSwitch"
            android:layout_width="157dp"
            android:layout_height="34dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/SliderText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="7dp"
            tools:layout_editor_absoluteX="219dp" />

        <Spinner
            android:id="@+id/modifierSpinner"
            android:layout_width="81dp"
            android:layout_height="38dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/modifierRadioGroup"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/modifierValueLable"
            android:layout_width="72dp"
            android:layout_height="35dp"
            android:layout_marginRight="0dp"
            android:text="@string/ModifierValue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/modifierSpinner"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.262"
            tools:layout_editor_absoluteX="223dp"
            tools:layout_editor_absoluteY="127dp" />

        <RadioGroup
            android:id="@+id/modifierRadioGroup"
            android:layout_width="63dp"
            android:layout_height="75dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modifierSwitch">

            <RadioButton
                android:id="@+id/modifierPosButton"
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:text="@string/PositveButton" />

            <RadioButton
                android:id="@+id/modifierNegButton"
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:text="@string/NegativeButton" />
        </RadioGroup>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>
