<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rhuard.savagediceroller.FudgeDiceRoller">

    <LinearLayout
        android:id="@+id/modifierLayout"
        android:layout_width="168dp"
        android:layout_height="168dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp">

        <fragment
            android:id="@+id/modiferFragment"
            android:name="com.example.rhuard.savagediceroller.ModifierFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/addFudgeDiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:onClick="AddDice"
        android:text="@string/PositveButton"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/fudgeDiceTextView" />

    <Button
        android:id="@+id/subFudgeDiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:onClick="RemoveDice"
        android:text="@string/NegativeButton"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/addFudgeDiceButton" />

    <TextView
        android:id="@+id/fudgeDiceTextView"
        android:layout_width="68dp"
        android:layout_height="43dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp"
        android:gravity="left|center_vertical"
        android:text="@string/OpenD6DieTotal"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fudgeDiceRollButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:onClick="RollDice"
        android:text="@string/RollButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subFudgeDiceButton" />

    <HorizontalScrollView
        android:id="@+id/fudgeRollsScrollView"
        android:layout_width="340dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/fudgeDiceResultsScrollView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/fudgeDieRollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="none"
                android:focusable="auto"
                android:focusableInTouchMode="false"
                android:gravity="left|center_vertical"
                android:isScrollContainer="false"
                android:scrollHorizontally="false"
                android:scrollIndicators="end"
                android:scrollbars="none"
                android:singleLine="false"
                android:text="@string/Rolls"
                android:textSize="25sp"
                app:layout_constraintHorizontal_bias="0.0"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp" />

        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/fudgeDiceResultsScrollView"
        android:layout_width="340dp"
        android:layout_height="35dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fudgeResultView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/ResultText"
                android:textSize="25sp"
                tools:layout_editor_absoluteX="22dp"
                tools:layout_editor_absoluteY="277dp" />
        </LinearLayout>
    </HorizontalScrollView>

</android.support.constraint.ConstraintLayout>
